--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-torch>=1.1
-scikit-learn
-numpy
-pandas
-tqdm
-lmdb
-optuna
-torchmetrics
+torch~=2.2.1
+scikit-learn~=1.4.1
+numpy~=1.26.4
+pandas~=2.2.1
+tqdm~=4.66.2
+lmdb~=1.4.1
+optuna~=3.5.0
+torchmetrics~=1.3.1
+Cython~=3.0.9
+jupyter==1.0.0
+matplotlib~=3.8.3
+seaborn~=0.13.2
